--- a/web/templates/menu.mustache
+++ b/web/templates/menu.mustache
@@ -46,5 +46,8 @@
     <li class="nav-item">
       <a class="nav-link" href="table.php">All readings</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="managesensors.php">Manage sensors</a>
+    </li>
   </ul>
 </nav>
