Styling of button

--- a/web/templates/sensornames.mustache
+++ b/web/templates/sensornames.mustache
@@ -22,7 +22,7 @@
                 <td>{{Sensor}}</td>
                 <td>{{SensorName}}</td>
                 <td><input type="text" name="sensorname" value="{{SensorName}}"/></td>
-                <td><input type="Submit" value="Update name"/></td>
+                <td><input class="btn btn-primary" type="Submit" value="Update name"/></td>
             </form>
         </tr>
         {{/all}}
