Added 4h option to the menu

--- a/web/templates/menu.mustache
+++ b/web/templates/menu.mustache
@@ -35,6 +35,7 @@
       </a>
       <div class="dropdown-menu">
         <a class="dropdown-item" href="recent.php?Duration=1h">Hour</a>
+        <a class="dropdown-item" href="recent.php?Duration=4h">4 hours</a>
         <a class="dropdown-item" href="recent.php?Duration=12h">12 hours</a>
         <a class="dropdown-item" href="recent.php?Duration=24h">Day</a>
         <a class="dropdown-item" href="recent.php?Duration=7d">Week</a>
